---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Improved loading performance a bit
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 0.18.36
Date: 04. 07. 2020
  Features:
    - Added keyboard combination for moving subfactories and recipe lines to the very start/end of their list
  Changes:
    - Made it so the content of textboxes in the module/beacon picker get selected automatically under certain circumstances
  Bugfixes:
    - Fixed that setting exact item amounts on a recipe would not calculate the percentage correctly in some cases
    - Fixed that negative fluid temperatures would lead to a crash when starting/loading a map
    - Fixed productivity applying to the rocket silo satellite even though it shouldn't
    - Fixed that certain modded recipes would not show up in the recipe picker
    - Fixed that some recipes showed up even though the research for them was disabled

---------------------------------------------------------------------------------------------------
Version: 0.18.35
Date: 18. 06. 2020
  Bugfixes:
    - Fixed a bug where setting recipe percentages by defining item amounts would not apply correctly to lines with subfloors

---------------------------------------------------------------------------------------------------
Version: 0.18.34
Date: 18. 06. 2020
  Changes:
    - Made the item-percentage-utility textfield wider
    - This update includes a lot of behind-the-scenes changes, so there might be a crash or two that I haven't found yet
  Bugfixes:
    - Fixed a crash when trying to set an empty product/ingredient amount on a recipe
    - Added a missing locale key for the new pause-on-interface keyboard shortcut

---------------------------------------------------------------------------------------------------
Version: 0.18.33