@@ -62,6 +62,9 @@ fp_open_interface=Open Factory Planner
 fp_beacon_selector=Beacon Selector
 
 
+[command-help]
+fp_reset_prototypes=Reconstructs the various prototypes from the base game data. Shouldn't ever be needed.
+
 [rb-remote]
 source-factoryplanner-main_dialog=Factory Planner
 
